--- a/todo-list-api/src/main/resources/application.properties
+++ b/todo-list-api/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=todo-list-api
+server.port=8081
+spring.datasource.url=jdbc:h2:mem:todoapp;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
