--- a/todo-list-api/src/main/resources/application.properties
+++ b/todo-list-api/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=todo-list-api
 server.port=8081
-spring.datasource.url=jdbc:h2:mem:todoapp;DB_CLOSE_DELAY=-1
-spring.datasource.driverClassName=org.h2.Driver
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/todos
+spring.datasource.username=todo_user
+spring.datasource.password=secret
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
